RTC6/RTC6 Files/Linux/debian-bullseye/usr/share/scanlab/examples/1/scanlab/rtc6.h

    typedef int32_t LONG;     //  LONG  is assumed to be 4 Bytes
    typedef uint32_t UINT;     //  UINT  is assumed to be 4 Bytes
    typedef uintptr_t ULONG_PTR;
RTC6_API UINT __stdcall init_rtc6_dll(void);
RTC6_API void __stdcall free_rtc6_dll(void);
RTC6_API void __stdcall set_rtc4_mode(void);
RTC6_API void __stdcall set_rtc5_mode(void);
RTC6_API void __stdcall set_rtc6_mode(void);
RTC6_API UINT __stdcall get_rtc_mode(void);
RTC6_API UINT __stdcall n_get_error(const UINT CardNo);
RTC6_API UINT __stdcall n_get_last_error(const UINT CardNo);
RTC6_API void __stdcall n_reset_error(const UINT CardNo, const UINT Code);
RTC6_API UINT __stdcall n_set_verify(const UINT CardNo, const UINT Verify);
RTC6_API UINT __stdcall get_error(void);
RTC6_API UINT __stdcall get_last_error(void);
RTC6_API void __stdcall reset_error(const UINT Code);
RTC6_API UINT __stdcall set_verify(const UINT Verify);
RTC6_API UINT __stdcall verify_checksum(const char* Name);
RTC6_API UINT __stdcall eth_count_cards(void);
RTC6_API UINT __stdcall eth_found_cards(void);
RTC6_API UINT __stdcall eth_max_card(void);
RTC6_API LONG __stdcall eth_remove_card(const UINT CardNo);
RTC6_API void __stdcall eth_get_card_info(const UINT CardNo, const ULONG_PTR Ptr);
RTC6_API void __stdcall eth_get_card_info_search(const UINT SearchNo, const ULONG_PTR Ptr);
RTC6_API void __stdcall eth_set_search_cards_timeout(const UINT TimeOut);
RTC6_API UINT __stdcall eth_search_cards(const UINT Ip, const UINT NetMask);
RTC6_API UINT __stdcall eth_search_cards_range(const UINT StartIp, const UINT EndIp);
RTC6_API LONG __stdcall eth_assign_card_ip(const UINT Ip, const UINT CardNo);
RTC6_API LONG __stdcall eth_assign_card(const UINT SearchNo, const UINT CardNo);
RTC6_API UINT __stdcall eth_convert_string_to_ip(const char* IpString);
RTC6_API void __stdcall eth_convert_ip_to_string(const UINT Ip, const ULONG_PTR IpString);
RTC6_API UINT __stdcall eth_get_ip(const UINT CardNo);
RTC6_API UINT __stdcall eth_get_ip_search(const UINT SearchNo);
RTC6_API UINT __stdcall eth_get_serial_search(const UINT SearchNo);
RTC6_API UINT __stdcall n_eth_get_last_error(const UINT CardNo);
RTC6_API UINT __stdcall n_eth_get_error(const UINT CardNo);
RTC6_API UINT __stdcall n_eth_error_dump(const UINT CardNo, const ULONG_PTR Dump);
RTC6_API UINT __stdcall n_eth_set_static_ip(const UINT CardNo, const UINT Ip, const UINT NetMask, const UINT Gateway);
RTC6_API UINT __stdcall n_eth_get_static_ip(const UINT CardNo, UINT* Ip, UINT* NetMask, UINT* Gateway);
RTC6_API UINT __stdcall n_eth_set_port_numbers(const UINT CardNo, const UINT UDPsearch, const UINT UDPexcl, const UINT TCP);
RTC6_API UINT __stdcall n_eth_get_port_numbers(const UINT CardNo, UINT* UDPsearch, UINT* UDPexcl, UINT* TCP);
RTC6_API void __stdcall n_eth_set_com_timeouts(const UINT CardNo, const UINT AcquireTimeout, const UINT AcquireMaxRetries, const UINT SendRecvTimeout, const UINT SendRecvMaxRetries, const UINT KeepAlive, const UINT KeepInterval);
RTC6_API void __stdcall n_eth_get_com_timeouts(const UINT CardNo, UINT* AcquireTimeout, UINT* AcquireMaxRetries, UINT* SendRecvTimeout, UINT* SendRecvMaxRetries, UINT* KeepAlive, UINT* KeepInterval);
RTC6_API void __stdcall n_eth_set_com_timeouts_auto(const UINT CardNo, const double InitialTimeout, const double MaxTimeout, const double Multiplier, const UINT Mode);
RTC6_API void __stdcall n_eth_get_com_timeouts_auto(const UINT CardNo, double* InitialTimeout, double* MaxTimeout, double* Multiplier, UINT* Mode);
RTC6_API UINT __stdcall n_eth_set_high_performance_mode(const UINT CardNo, const UINT Mode);
RTC6_API UINT __stdcall n_eth_check_connection(const UINT CardNo);
RTC6_API void __stdcall n_set_eth_boot_control(const UINT CardNo, const UINT Ctrl);
RTC6_API void __stdcall n_eth_boot_timeout(const UINT CardNo, const UINT Timeout);
RTC6_API void __stdcall n_eth_boot_dcmd(const UINT CardNo);
RTC6_API UINT __stdcall n_store_program(const UINT CardNo, const UINT Mode);
RTC6_API UINT __stdcall n_read_image_eth(const UINT CardNo, const char* Name);
RTC6_API UINT __stdcall n_write_image_eth(const UINT CardNo, const char* Name);
RTC6_API void __stdcall n_eth_configure_link_loss(const UINT CardNo, const UINT Mode);
RTC6_API void __stdcall n_eth_get_standalone_status(const UINT CardNo, UINT* Status, UINT* Error, UINT* Mode);
RTC6_API void __stdcall n_eth_config_waveform_streaming_ctrl(const UINT CardNo, const UINT Size, const UINT Flags);
RTC6_API UINT __stdcall eth_get_last_error(void);
RTC6_API UINT __stdcall eth_get_error(void);
RTC6_API UINT __stdcall eth_error_dump(const ULONG_PTR Dump);
RTC6_API UINT __stdcall eth_set_static_ip(const UINT Ip, const UINT NetMask, const UINT Gateway);
RTC6_API UINT __stdcall eth_get_static_ip(UINT* Ip, UINT* NetMask, UINT* Gateway);
RTC6_API UINT __stdcall eth_set_port_numbers(const UINT UDPsearch, const UINT UDPexcl, const UINT TCP);
RTC6_API UINT __stdcall eth_get_port_numbers(UINT* UDPsearch, UINT* UDPexcl, UINT* TCP);
RTC6_API void __stdcall eth_set_com_timeouts(const UINT AcquireTimeout, const UINT AcquireMaxRetries, const UINT SendRecvTimeout, const UINT SendRecvMaxRetries, const UINT KeepAlive, const UINT KeepInterval);
RTC6_API void __stdcall eth_get_com_timeouts(UINT* AcquireTimeout, UINT* AcquireMaxRetries, UINT* SendRecvTimeout, UINT* SendRecvMaxRetries, UINT* KeepAlive, UINT* KeepInterval);
RTC6_API void __stdcall eth_set_com_timeouts_auto(const double InitialTimeout, const double MaxTimeout, const double Multiplier, const UINT Mode);
RTC6_API void __stdcall eth_get_com_timeouts_auto(double* InitialTimeout, double* MaxTimeout, double* Multiplier, UINT* Mode);
RTC6_API UINT __stdcall eth_set_high_performance_mode(const UINT Mode);
RTC6_API UINT __stdcall eth_check_connection(void);
RTC6_API void __stdcall set_eth_boot_control(const UINT Ctrl);
RTC6_API void __stdcall eth_boot_timeout(const UINT Timeout);
RTC6_API void __stdcall eth_boot_dcmd(void);
RTC6_API UINT __stdcall store_program(const UINT Mode);
RTC6_API UINT __stdcall read_image_eth(const char* Name);
RTC6_API UINT __stdcall write_image_eth(const char* Name);
RTC6_API void __stdcall eth_configure_link_loss(const UINT Mode);
RTC6_API void __stdcall eth_get_standalone_status(UINT* Status, UINT* Error, UINT* Mode);
RTC6_API void __stdcall eth_config_waveform_streaming_ctrl(const UINT Size, const UINT Flags);
RTC6_API UINT __stdcall read_abc_from_file(const char* Name, double* A, double* B, double* C);
RTC6_API UINT __stdcall write_abc_to_file(const char* Name, const double A, const double B, const double C);
RTC6_API UINT __stdcall read_abc_from_file_20b(const char* Name, double* A, double* B, double* C);
RTC6_API UINT __stdcall write_abc_to_file_20b(const char* Name, const double A, const double B, const double C);
RTC6_API UINT __stdcall n_create_dat_file(const UINT CardNo, const LONG Flag);
RTC6_API UINT __stdcall create_dat_file(const LONG Flag);
RTC6_API UINT __stdcall transform(LONG* Sig1, LONG* Sig2, const ULONG_PTR Ptr, const UINT Code);
RTC6_API UINT __stdcall rtc6_count_cards(void);
RTC6_API UINT __stdcall acquire_rtc(const UINT CardNo);
RTC6_API UINT __stdcall release_rtc(const UINT CardNo);
RTC6_API UINT __stdcall select_rtc(const UINT CardNo);
RTC6_API UINT __stdcall get_dll_version(void);
RTC6_API UINT __stdcall n_get_card_type(const UINT CardNo);
RTC6_API UINT __stdcall n_get_serial_number(const UINT CardNo);
RTC6_API UINT __stdcall n_get_hex_version(const UINT CardNo);
RTC6_API UINT __stdcall n_get_rtc_version(const UINT CardNo);
RTC6_API UINT __stdcall n_get_bios_version(const UINT CardNo);
RTC6_API UINT __stdcall get_card_type(void);
RTC6_API UINT __stdcall get_serial_number(void);
RTC6_API UINT __stdcall get_hex_version(void);
RTC6_API UINT __stdcall get_rtc_version(void);
RTC6_API UINT __stdcall get_bios_version(void);
RTC6_API UINT __stdcall n_load_program_file(const UINT CardNo, const char* Path);
RTC6_API void __stdcall n_sync_slaves(const UINT CardNo);
RTC6_API UINT __stdcall n_get_sync_status(const UINT CardNo);
RTC6_API void __stdcall n_master_slave_config(const UINT CardNo, const UINT Flags);
RTC6_API UINT __stdcall n_load_correction_file(const UINT CardNo, const char* Name, const UINT No, const UINT Dim);
RTC6_API UINT __stdcall n_load_zoom_correction_file(const UINT CardNo, const char* Name, const UINT No);
RTC6_API UINT __stdcall n_load_oct_table_no(const UINT CardNo, const double A, const double B, const UINT No);
RTC6_API UINT __stdcall n_load_z_table_no(const UINT CardNo, const double A, const double B, const double C, const UINT No);
RTC6_API UINT __stdcall n_load_z_table(const UINT CardNo, const double A, const double B, const double C);
RTC6_API void __stdcall n_select_cor_table(const UINT CardNo, const UINT HeadA, const UINT HeadB);
RTC6_API UINT __stdcall n_set_dsp_mode(const UINT CardNo, const UINT Mode);
RTC6_API LONG __stdcall n_load_stretch_table(const UINT CardNo, const char* Name, const LONG No, const UINT TableNo);
RTC6_API void __stdcall n_number_of_correction_tables(const UINT CardNo, const UINT Number);
RTC6_API UINT __stdcall n_load_z_table_no_20b(const UINT CardNo, const double A, const double B, const double C, const UINT No);
RTC6_API UINT __stdcall n_load_z_table_20b(const UINT CardNo, const double A, const double B, const double C);
RTC6_API double __stdcall n_get_head_para(const UINT CardNo, const UINT HeadNo, const UINT ParaNo);
RTC6_API double __stdcall n_get_table_para(const UINT CardNo, const UINT TableNo, const UINT ParaNo);
RTC6_API UINT __stdcall load_program_file(const char* Path);
RTC6_API void __stdcall sync_slaves(void);
RTC6_API UINT __stdcall get_sync_status(void);
RTC6_API void __stdcall master_slave_config(const UINT Flags);
RTC6_API UINT __stdcall load_correction_file(const char* Name, const UINT No, const UINT Dim);