RTC6/RTC6 Files/Windows/RTC6Import.pas


function  init_rtc6_dll(): LongWord; stdcall; external RTC6DLL;
procedure free_rtc6_dll(); stdcall; external RTC6DLL;
procedure set_rtc4_mode(); stdcall; external RTC6DLL;
procedure set_rtc5_mode(); stdcall; external RTC6DLL;
procedure set_rtc6_mode(); stdcall; external RTC6DLL;
function  get_rtc_mode(): LongWord; stdcall; external RTC6DLL;
function  n_get_error(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_get_last_error(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
procedure n_reset_error(CardNo: LongWord; Code: LongWord); stdcall; external RTC6DLL;
function  n_set_verify(CardNo: LongWord; Verify: LongWord): LongWord; stdcall; external RTC6DLL;
function  get_error(): LongWord; stdcall; external RTC6DLL;
function  get_last_error(): LongWord; stdcall; external RTC6DLL;
procedure reset_error(Code: LongWord); stdcall; external RTC6DLL;
function  set_verify(Verify: LongWord): LongWord; stdcall; external RTC6DLL;
function  verify_checksum(Name: PChar): LongWord; stdcall; external RTC6DLL;
function  eth_count_cards(): LongWord; stdcall; external RTC6DLL;
function  eth_found_cards(): LongWord; stdcall; external RTC6DLL;
function  eth_max_card(): LongWord; stdcall; external RTC6DLL;
function  eth_remove_card(CardNo: LongWord): LongInt; stdcall; external RTC6DLL;
procedure eth_get_card_info(CardNo: LongWord; Ptr: PLongWord); stdcall; external RTC6DLL;
procedure eth_get_card_info_search(SearchNo: LongWord; Ptr: PLongWord); stdcall; external RTC6DLL;
procedure eth_set_search_cards_timeout(TimeOut: LongWord); stdcall; external RTC6DLL;
function  eth_search_cards(Ip: LongWord; NetMask: LongWord): LongWord; stdcall; external RTC6DLL;
function  eth_search_cards_range(StartIp: LongWord; EndIp: LongWord): LongWord; stdcall; external RTC6DLL;
function  eth_assign_card_ip(Ip: LongWord; CardNo: LongWord): LongInt; stdcall; external RTC6DLL;
function  eth_assign_card(SearchNo: LongWord; CardNo: LongWord): LongInt; stdcall; external RTC6DLL;
function  eth_convert_string_to_ip(IpString: PChar): LongWord; stdcall; external RTC6DLL;
procedure eth_convert_ip_to_string(Ip: LongWord; IpString: PLongWord); stdcall; external RTC6DLL;
function  eth_get_ip(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
function  eth_get_ip_search(SearchNo: LongWord): LongWord; stdcall; external RTC6DLL;
function  eth_get_serial_search(SearchNo: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_eth_get_last_error(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_eth_get_error(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_eth_error_dump(CardNo: LongWord; Dump: PLongWord): LongWord; stdcall; external RTC6DLL;
function  n_eth_set_static_ip(CardNo: LongWord; Ip: LongWord; NetMask: LongWord; Gateway: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_eth_get_static_ip(CardNo: LongWord; var Ip: LongWord; var NetMask: LongWord; var Gateway: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_eth_set_port_numbers(CardNo: LongWord; UDPsearch: LongWord; UDPexcl: LongWord; TCP: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_eth_get_port_numbers(CardNo: LongWord; var UDPsearch: LongWord; var UDPexcl: LongWord; var TCP: LongWord): LongWord; stdcall; external RTC6DLL;
procedure n_eth_set_com_timeouts(CardNo: LongWord; AcquireTimeout: LongWord; AcquireMaxRetries: LongWord; SendRecvTimeout: LongWord; SendRecvMaxRetries: LongWord; KeepAlive: LongWord; KeepInterval: LongWord); stdcall; external RTC6DLL;
procedure n_eth_get_com_timeouts(CardNo: LongWord; var AcquireTimeout: LongWord; var AcquireMaxRetries: LongWord; var SendRecvTimeout: LongWord; var SendRecvMaxRetries: LongWord; var KeepAlive: LongWord; var KeepInterval: LongWord); stdcall; external RTC6DLL;
procedure n_eth_set_com_timeouts_auto(CardNo: LongWord; InitialTimeout: Double; MaxTimeout: Double; Multiplier: Double; Mode: LongWord); stdcall; external RTC6DLL;
procedure n_eth_get_com_timeouts_auto(CardNo: LongWord; var InitialTimeout: Double; var MaxTimeout: Double; var Multiplier: Double; var Mode: LongWord); stdcall; external RTC6DLL;
function  n_eth_set_high_performance_mode(CardNo: LongWord; Mode: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_eth_check_connection(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
procedure n_set_eth_boot_control(CardNo: LongWord; Ctrl: LongWord); stdcall; external RTC6DLL;
procedure n_eth_boot_timeout(CardNo: LongWord; Timeout: LongWord); stdcall; external RTC6DLL;
procedure n_eth_boot_dcmd(CardNo: LongWord); stdcall; external RTC6DLL;
function  n_store_program(CardNo: LongWord; Mode: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_read_image_eth(CardNo: LongWord; Name: PChar): LongWord; stdcall; external RTC6DLL;
function  n_write_image_eth(CardNo: LongWord; Name: PChar): LongWord; stdcall; external RTC6DLL;
procedure n_eth_configure_link_loss(CardNo: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
procedure n_eth_get_standalone_status(CardNo: LongWord; var Status: LongWord; var Error: LongWord; var Mode: LongWord); stdcall; external RTC6DLL;
procedure n_eth_config_waveform_streaming_ctrl(CardNo: LongWord; Size: LongWord; Flags: LongWord); stdcall; external RTC6DLL;
function  eth_get_last_error(): LongWord; stdcall; external RTC6DLL;
function  eth_get_error(): LongWord; stdcall; external RTC6DLL;
function  eth_error_dump(Dump: PLongWord): LongWord; stdcall; external RTC6DLL;
function  eth_set_static_ip(Ip: LongWord; NetMask: LongWord; Gateway: LongWord): LongWord; stdcall; external RTC6DLL;
function  eth_get_static_ip(var Ip: LongWord; var NetMask: LongWord; var Gateway: LongWord): LongWord; stdcall; external RTC6DLL;
function  eth_set_port_numbers(UDPsearch: LongWord; UDPexcl: LongWord; TCP: LongWord): LongWord; stdcall; external RTC6DLL;
function  eth_get_port_numbers(var UDPsearch: LongWord; var UDPexcl: LongWord; var TCP: LongWord): LongWord; stdcall; external RTC6DLL;
procedure eth_set_com_timeouts(AcquireTimeout: LongWord; AcquireMaxRetries: LongWord; SendRecvTimeout: LongWord; SendRecvMaxRetries: LongWord; KeepAlive: LongWord; KeepInterval: LongWord); stdcall; external RTC6DLL;
procedure eth_get_com_timeouts(var AcquireTimeout: LongWord; var AcquireMaxRetries: LongWord; var SendRecvTimeout: LongWord; var SendRecvMaxRetries: LongWord; var KeepAlive: LongWord; var KeepInterval: LongWord); stdcall; external RTC6DLL;
procedure eth_set_com_timeouts_auto(InitialTimeout: Double; MaxTimeout: Double; Multiplier: Double; Mode: LongWord); stdcall; external RTC6DLL;
procedure eth_get_com_timeouts_auto(var InitialTimeout: Double; var MaxTimeout: Double; var Multiplier: Double; var Mode: LongWord); stdcall; external RTC6DLL;
function  eth_set_high_performance_mode(Mode: LongWord): LongWord; stdcall; external RTC6DLL;
function  eth_check_connection(): LongWord; stdcall; external RTC6DLL;
procedure set_eth_boot_control(Ctrl: LongWord); stdcall; external RTC6DLL;
procedure eth_boot_timeout(Timeout: LongWord); stdcall; external RTC6DLL;
procedure eth_boot_dcmd(); stdcall; external RTC6DLL;
function  store_program(Mode: LongWord): LongWord; stdcall; external RTC6DLL;
function  read_image_eth(Name: PChar): LongWord; stdcall; external RTC6DLL;
function  write_image_eth(Name: PChar): LongWord; stdcall; external RTC6DLL;
procedure eth_configure_link_loss(Mode: LongWord); stdcall; external RTC6DLL;
procedure eth_get_standalone_status(var Status: LongWord; var Error: LongWord; var Mode: LongWord); stdcall; external RTC6DLL;
procedure eth_config_waveform_streaming_ctrl(Size: LongWord; Flags: LongWord); stdcall; external RTC6DLL;
function  read_abc_from_file(Name: PChar; var A: Double; var B: Double; var C: Double): LongWord; stdcall; external RTC6DLL;
function  write_abc_to_file(Name: PChar; A: Double; B: Double; C: Double): LongWord; stdcall; external RTC6DLL;
function  read_abc_from_file_20b(Name: PChar; var A: Double; var B: Double; var C: Double): LongWord; stdcall; external RTC6DLL;
function  write_abc_to_file_20b(Name: PChar; A: Double; B: Double; C: Double): LongWord; stdcall; external RTC6DLL;
function  n_create_dat_file(CardNo: LongWord; Flag: LongInt): LongWord; stdcall; external RTC6DLL;
function  create_dat_file(Flag: LongInt): LongWord; stdcall; external RTC6DLL;
function  transform(var Sig1: LongInt; var Sig2: LongInt; Ptr: PLongWord; Code: LongWord): LongWord; stdcall; external RTC6DLL;
function  rtc6_count_cards(): LongWord; stdcall; external RTC6DLL;
function  acquire_rtc(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
function  release_rtc(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
function  select_rtc(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
function  get_dll_version(): LongWord; stdcall; external RTC6DLL;
function  n_get_card_type(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_get_serial_number(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_get_hex_version(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_get_rtc_version(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_get_bios_version(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
function  get_card_type(): LongWord; stdcall; external RTC6DLL;
function  get_serial_number(): LongWord; stdcall; external RTC6DLL;
function  get_hex_version(): LongWord; stdcall; external RTC6DLL;
function  get_rtc_version(): LongWord; stdcall; external RTC6DLL;
function  get_bios_version(): LongWord; stdcall; external RTC6DLL;
function  n_load_program_file(CardNo: LongWord; Path: PChar): LongWord; stdcall; external RTC6DLL;
procedure n_sync_slaves(CardNo: LongWord); stdcall; external RTC6DLL;
function  n_get_sync_status(CardNo: LongWord): LongWord; stdcall; external RTC6DLL;
procedure n_master_slave_config(CardNo: LongWord; Flags: LongWord); stdcall; external RTC6DLL;
function  n_load_correction_file(CardNo: LongWord; Name: PChar; No: LongWord; Dim: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_load_zoom_correction_file(CardNo: LongWord; Name: PChar; No: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_load_oct_table_no(CardNo: LongWord; A: Double; B: Double; No: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_load_z_table_no(CardNo: LongWord; A: Double; B: Double; C: Double; No: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_load_z_table(CardNo: LongWord; A: Double; B: Double; C: Double): LongWord; stdcall; external RTC6DLL;
procedure n_select_cor_table(CardNo: LongWord; HeadA: LongWord; HeadB: LongWord); stdcall; external RTC6DLL;
function  n_set_dsp_mode(CardNo: LongWord; Mode: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_load_stretch_table(CardNo: LongWord; Name: PChar; No: LongInt; TableNo: LongWord): LongInt; stdcall; external RTC6DLL;
procedure n_number_of_correction_tables(CardNo: LongWord; Number: LongWord); stdcall; external RTC6DLL;
function  n_load_z_table_no_20b(CardNo: LongWord; A: Double; B: Double; C: Double; No: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_load_z_table_20b(CardNo: LongWord; A: Double; B: Double; C: Double): LongWord; stdcall; external RTC6DLL;
function  n_get_head_para(CardNo: LongWord; HeadNo: LongWord; ParaNo: LongWord): Double; stdcall; external RTC6DLL;
function  n_get_table_para(CardNo: LongWord; TableNo: LongWord; ParaNo: LongWord): Double; stdcall; external RTC6DLL;
function  load_program_file(Path: PChar): LongWord; stdcall; external RTC6DLL;
procedure sync_slaves(); stdcall; external RTC6DLL;
function  get_sync_status(): LongWord; stdcall; external RTC6DLL;
procedure master_slave_config(Flags: LongWord); stdcall; external RTC6DLL;
function  load_correction_file(Name: PChar; No: LongWord; Dim: LongWord): LongWord; stdcall; external RTC6DLL;
